--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+test = true
+bench = true
+
 [dependencies]
+approx = "0.5.1"
+clap = "4.5.0"
+enum_delegate = "0.2.0"
+enum_dispatch = "0.3.12"
+itertools = "0.12.1"
+rayon = "1.8.1"
