--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ test = true
 bench = true
 
 [dependencies]
+anyhow = "1.0.80"
 approx = "0.5.1"
 clap = "4.5.0"
 enum_delegate = "0.2.0"
 enum_dispatch = "0.3.12"
 itertools = "0.12.1"
 rayon = "1.8.1"
+shaderc = "0.8.3"
