--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ approx = "0.5.1"
 clap = "4.5.0"
 enum_delegate = "0.2.0"
 enum_dispatch = "0.3.12"
+glsl-lang = { version = "0.5.2", features = ["lexer-v2-full"] }
 itertools = "0.12.1"
 rayon = "1.8.1"
 shaderc = "0.8.3"
