--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = "4.5.4"
 enum_delegate = "0.2.0"
 enum_dispatch = "0.3.12"
 glsl-lang = { version = "0.5.2", features = ["lexer-v2-full"] }
+glsl-lang-pp = "0.5.2"
 itertools = "0.13.0"
 rayon = "1.10.0"
 shaderc = "0.8.3"
