--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,21 @@ edition = "2021"
 test = true
 bench = true
 
+[profile.test]
+opt-level = 0
+
 [dependencies]
 anyhow = "1.0.86"
 approx = "0.5.1"
 clap = "4.5.4"
+crevice = "0.16.0"
 enum_delegate = "0.2.0"
 enum_dispatch = "0.3.12"
 glsl-lang = { version = "0.5.2", features = ["lexer-v2-full"] }
 glsl-lang-pp = "0.5.2"
 itertools = "0.13.0"
+nalgebra = "0.32.5"
 rayon = "1.10.0"
 shaderc = "0.8.3"
+thiserror = "1.0.61"
 wgpu = { version = "0.20.0", features = ["glsl"] }
