--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ glsl-lang = { version = "0.5.2", features = ["lexer-v2-full"] }
 glsl-lang-pp = "0.5.2"
 itertools = "0.13.0"
 naga = { version = "0.20.0", features = ["glsl-in"] }
-nalgebra = "0.32.5"
+nalgebra = "0.33.0"
+petgraph = "0.6.5"
 pollster = "0.3.0"
 rayon = "1.10.0"
 shaderc = "0.8.3"
