--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ clap = "4.5.4"
 crevice = "0.16.0"
 enum_delegate = "0.2.0"
 enum_dispatch = "0.3.12"
+glsl = "7.0.0"
 glsl-lang = { version = "0.5.2", features = ["lexer-v2-full"] }
 glsl-lang-pp = "0.5.2"
 itertools = "0.13.0"
