--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ glsl-lang-pp = "0.5.2"
 itertools = "0.13.0"
 naga = { version = "0.20.0", features = ["glsl-in"] }
 nalgebra = "0.33.0"
+nom = "7.1.3"
 petgraph = "0.6.5"
 pollster = "0.3.0"
 rayon = "1.10.0"
