--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,8 @@ rayon = "1.10.0"
 shaderc = "0.8.3"
 thiserror = "1.0.61"
 wgpu = { version = "22.0.0", features = ["naga-ir", "spirv"] }
+lalrpop-util = { version = "0.20.2", features = ["lexer"] }
+smol_str = "0.2.2"
+
+[build-dependencies]
+lalrpop = "0.20.2"
